first successfull DB test

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
     current: marks tests as current for focused testing
+    old: marks tests as old for focused testing
+    completed
